# myBudget

./: .gitignore  CMakeLists.txt  README.md  flow.plantuml
include/: db.h  misc.h  shell.h
src/: db.c  db.h  main.c  misc.c  shell.c  shell.h
